# kanban-tui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
src/: app.rs  board.rs  column.rs  input.rs  lib.rs  main.rs  storage.rs  task.rs
src/ui/: board_selector.rs  column.rs  mod.rs  status_bar.rs  task_detail.rs
tests/: integration_test.rs
