[package]
name = "kanban-tui"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A terminal user interface for managing Kanban boards"
license = "MIT"
repository = "https://github.com/yourusername/kanban-tui"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[dev-dependencies]
# Test dependencies can be added here as needed

[[bin]]
name = "kanban-tui"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
