[package]
name = "kanban-tui"
version = "0.2.0"
edition = "2021"
authors = ["Luke Light"]
description = "A terminal user interface for managing Kanban boards"
license = "MIT"
repository = ""
keywords = ["kanban", "tui", "terminal", "task-management", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = "0.4.42"

[dev-dependencies]
# Test dependencies can be added here as needed

[[bin]]
name = "kanban-tui"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
